# gazebo_robot

./: README.md
canbot_2dnav/: CMakeLists.txt  package.xml
canbot_2dnav/config/: base_local_planner_params.yaml  costmap_common_params.yaml  global_costmap_params.yaml  local_costmap_params.yaml
canbot_2dnav/launch/: canbot_move_plan.launch
canbot_control/: CMakeLists.txt  package.xml
canbot_control/config/: canbot_control.yaml
canbot_control/launch/: canbot_control.launch
canbot_description/: CMakeLists.txt  package.xml
canbot_description/urdf/: canbot.gazebo  canbot.xacro  macros.xacro  materials.xacro
canbot_gazebo/: CMakeLists.txt  package.xml
canbot_gazebo/launch/: canbot.launch  canbot_load_map.launch  canbot_slam.launch
canbot_gazebo/models/Maze0/: Maze0.config  Maze0.sdf  Maze0.urdf  Maze0.xacro
canbot_gazebo/models/Maze1/: Maze1.sdf
canbot_gazebo/worlds/: canbot.world  rviz_config.rviz
canbot_msgs/: CMakeLists.txt  package.xml
canbot_msgs/msg/: RegionsLaser.msg
canbot_plan/: CMakeLists.txt  package.xml
canbot_plan/launch/: canbot_configuration.launch
canbot_plan/scripts/: canbot_dummy_move_node.cpp  canbot_dummy_plan_node.cpp  canbot_move_node.cpp  canbot_plan_node.cpp
canbot_plan/src/: canbot_plan_node.cpp
simple_navigation_goals/: CMakeLists.txt  package.xml
simple_navigation_goals/src/: simple_navigation_goals.cpp
